force-app/main/default/objects/Campaign/fields/ACTID__c.field-meta.xml
<CustomField>
    <fullName>ACTID__c</fullName>
    <externalId>true</externalId>
    <label>ACTID</label>
    <length>150</length>
    <type>Text</type>
</CustomField>