force-app/main/default/objects/Campaign/fields/Actual_Attendance__c.field-meta.xml
<CustomField>
    <fullName>Actual_Attendance__c</fullName>
    <description>Campaign members with status of &quot;Attended&quot;</description>
    <label>Actual Attendance</label>
    <summaryFilterItems>
        <field>CampaignMember.Status</field>
        <operation>equals</operation>
        <value>A - Attended, C - Confirmed</value>
    </summaryFilterItems>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>