force-app/main/default/objects/Campaign/fields/Campagin_Source__c.field-meta.xml
<CustomField>
    <fullName>Campagin_Source__c</fullName>
    <label>Campagin Source</label>
    <length>255</length>
    <type>Text</type>
</CustomField>