force-app/main/default/objects/Campaign/fields/Campaign_Main_Purpose__c.field-meta.xml
<CustomField>
    <fullName>Campaign_Main_Purpose__c</fullName>
    <description>For reporting purposes to determine number of Campaigns of each main purpose.</description>
    <label>Campaign Main Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Email/Nurture</fullName>
            </value>
            <value>
                <fullName>Name Capture Only</fullName>
            </value>
            <value>
                <fullName>Phone</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>