force-app/main/default/objects/Campaign/fields/Con_Url__c.field-meta.xml
<CustomField>
    <fullName>Con_Url__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Con Url</label>
    <type>Checkbox</type>
</CustomField>