force-app/main/default/objects/Campaign/fields/Con_Url_Date__c.field-meta.xml
<CustomField>
    <fullName>Con_Url_Date__c</fullName>
    <label>Con Url Date</label>
    <type>Date</type>
</CustomField>