force-app/main/default/objects/Campaign/fields/Cru_Donation_Code__c.field-meta.xml
<CustomField>
    <fullName>Cru_Donation_Code__c</fullName>
    <label>Cru Donation Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>