force-app/main/default/objects/Campaign/fields/Cut_off_Date__c.field-meta.xml
<CustomField>
    <fullName>Cut_off_Date__c</fullName>
    <inlineHelpText>Cut off date of the match</inlineHelpText>
    <label>Cut off Date</label>
    <type>Date</type>
</CustomField>