force-app/main/default/objects/Campaign/fields/Event_Area__c.field-meta.xml
<CustomField>
    <fullName>Event_Area__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Event Area</label>
    <referenceTo>Event_Area_Code__c</referenceTo>
    <relationshipLabel>Campaigns</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>