force-app/main/default/objects/Campaign/fields/Event_City_and_State__c.field-meta.xml
<CustomField>
    <fullName>Event_City_and_State__c</fullName>
    <inlineHelpText>List city and state where the event was held.</inlineHelpText>
    <label>Event City and State</label>
    <length>50</length>
    <type>Text</type>
</CustomField>