force-app/main/default/objects/Campaign/fields/Event_Code__c.field-meta.xml
<CustomField>
    <fullName>Event_Code__c</fullName>
    <externalId>true</externalId>
    <label>Event Code</label>
    <length>15</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>