force-app/main/default/objects/Campaign/fields/FL_Donation_Code__c.field-meta.xml
<CustomField>
    <fullName>FL_Donation_Code__c</fullName>
    <label>FL Donation Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>