force-app/main/default/objects/Campaign/fields/FL_Ministry_Rep__c.field-meta.xml
<CustomField>
    <fullName>FL_Ministry_Rep__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FL Ministry Rep</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>