force-app/main/default/objects/Campaign/fields/Form_Process__c.field-meta.xml
<CustomField>
    <fullName>Form_Process__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Form Process</label>
    <type>Checkbox</type>
</CustomField>