force-app/main/default/objects/Campaign/fields/Form_Process_Date__c.field-meta.xml
<CustomField>
    <fullName>Form_Process_Date__c</fullName>
    <label>Form Process Date</label>
    <type>Date</type>
</CustomField>