force-app/main/default/objects/Campaign/fields/Form_Text_2__c.field-meta.xml
<CustomField>
    <fullName>Form_Text_2__c</fullName>
    <label>Form Text 2</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>