force-app/main/default/objects/Campaign/fields/Form_Text_3__c.field-meta.xml
<CustomField>
    <fullName>Form_Text_3__c</fullName>
    <label>Form Text 3</label>
    <length>5000</length>
    <type>Html</type>
</CustomField>