force-app/main/default/objects/Campaign/fields/Form_User_Email__c.field-meta.xml
<CustomField>
    <fullName>Form_User_Email__c</fullName>
    <label>Form User Email</label>
    <length>50</length>
    <type>Text</type>
</CustomField>