force-app/main/default/objects/Campaign/fields/Lives_Impacted__c.field-meta.xml
<CustomField>
    <fullName>Lives_Impacted__c</fullName>
    <label>Lives Impacted</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>