force-app/main/default/objects/Campaign/fields/MC_Sub_Id__c.field-meta.xml
<CustomField>
    <fullName>MC_Sub_Id__c</fullName>
    <label>MC Sub Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>