force-app/main/default/objects/Campaign/fields/Min_Rep_A__c.field-meta.xml
<CustomField>
    <fullName>Min_Rep_A__c</fullName>
    <formula>Event_Area__r.Ministry_Rep_A__r.FirstName &amp; &quot; &quot; &amp; Event_Area__r.Ministry_Rep_A__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Min Rep A</label>
    <type>Text</type>
</CustomField>