force-app/main/default/objects/Campaign/fields/Min_Rep_Email__c.field-meta.xml
<CustomField>
    <fullName>Min_Rep_Email__c</fullName>
    <formula>Event_Area__r.Ministry_Rep_A__r.Email</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Min Rep Email</label>
    <type>Text</type>
</CustomField>