force-app/main/default/objects/Campaign/fields/Ministry_Rep_1__c.field-meta.xml
<CustomField>
    <fullName>Ministry_Rep_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ministry Rep 1</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campaigns (Ministry Rep 1)</relationshipLabel>
    <relationshipName>Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>