force-app/main/default/objects/Campaign/fields/Ministry_Rep_2__c.field-meta.xml
<CustomField>
    <fullName>Ministry_Rep_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ministry Rep 2</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Campaigns (Ministry Rep 2)</relationshipLabel>
    <relationshipName>Campaigns1</relationshipName>
    <type>Lookup</type>
</CustomField>