force-app/main/default/objects/Campaign/fields/SFID_18__c.field-meta.xml
<CustomField>
    <fullName>SFID_18__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>SFID (18)</label>
    <type>Text</type>
</CustomField>