force-app/main/default/objects/Campaign/fields/Source_Campaign_Code__c.field-meta.xml
<CustomField>
    <fullName>Source_Campaign_Code__c</fullName>
    <label>Source Campaign Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>