force-app/main/default/objects/Campaign/fields/Source_Code__c.field-meta.xml
<CustomField>
    <fullName>Source_Code__c</fullName>
    <label>Source Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>