force-app/main/default/objects/Campaign/fields/Sync_MC__c.field-meta.xml
<CustomField>
    <fullName>Sync_MC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sync MC</label>
    <type>Checkbox</type>
</CustomField>