force-app/main/default/objects/Campaign/fields/Territory_Code__c.field-meta.xml
<CustomField>
    <fullName>Territory_Code__c</fullName>
    <label>Territory Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>