force-app/main/default/objects/Campaign/fields/Total_Match__c.field-meta.xml
<CustomField>
    <fullName>Total_Match__c</fullName>
    <inlineHelpText>Maximum match for this campaign.</inlineHelpText>
    <label>Total Match</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>