force-app/main/default/objects/Campaign/fields/WE_FW8_NP__Is_Error_Found__c.field-meta.xml
<CustomField>
    <fullName>WE_FW8_NP__Is_Error_Found__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Error on Send</label>
    <type>Checkbox</type>
</CustomField>