force-app/main/default/objects/Campaign/fields/WE_FW8_NP__Number_of_Records_Processed__c.field-meta.xml
<CustomField>
    <fullName>WE_FW8_NP__Number_of_Records_Processed__c</fullName>
    <label>Number of Records Sent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>