force-app/main/default/objects/Campaign/fields/WE_FW8_NP__ScoreBatch_No_of_Records_Processed__c.field-meta.xml
<CustomField>
    <fullName>WE_FW8_NP__ScoreBatch_No_of_Records_Processed__c</fullName>
    <label>Score Batch Number of Records Processed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>