force-app/main/default/objects/Campaign/fields/WE_FW8_NP__Total_Records_Count__c.field-meta.xml
<CustomField>
    <fullName>WE_FW8_NP__Total_Records_Count__c</fullName>
    <label>Total Records Count</label>
    <summaryForeignKey>CampaignMember.CampaignId</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>