force-app/main/default/objects/Campaign/fields/WE_FW8_NP__WE_Score_Batch_Status__c.field-meta.xml
<CustomField>
    <fullName>WE_FW8_NP__WE_Score_Batch_Status__c</fullName>
    <label>WE Score Batch Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salesforce Batch In Progress</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Processing Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>