force-app/main/default/objects/Campaign/fields/WE_FW8_NP__WE_Score_Batch_Status_Indicator__c.field-meta.xml
<CustomField>
    <fullName>WE_FW8_NP__WE_Score_Batch_Status_Indicator__c</fullName>
    <formula>IF( ISBLANK(WE_FW8_NP__ScoreBatch_No_of_Records_Processed__c), &quot;0&quot;, TEXT(WE_FW8_NP__ScoreBatch_No_of_Records_Processed__c)) &amp; &quot; of &quot; &amp; TEXT(WE_FW8_NP__Total_Records_Count__c) &amp; &quot; records sent to WealthEngine&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WE Score Batch Status Indicator</label>
    <type>Text</type>
</CustomField>