force-app/main/default/objects/Campaign/fields/WTR_Area_Rep__c.field-meta.xml
<CustomField>
    <fullName>WTR_Area_Rep__c</fullName>
    <description>Only for use when entering the Ministry Rep from the Event Area in which a WTR was held and only for the Campaigns involving those that requested an Advisor call while attending WTR.</description>
    <inlineHelpText>Only for use when entering the Ministry Rep from the Event Area in which a WTR was held and only for the Campaigns involving those that requested an Advisor call while attending WTR.</inlineHelpText>
    <label>WTR Area Rep</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Bob Richardson</fullName>
            </value>
            <value>
                <fullName>Bob Stelter</fullName>
            </value>
            <value>
                <fullName>Chris Randazzo</fullName>
            </value>
            <value>
                <fullName>Dave Lowe</fullName>
            </value>
            <value>
                <fullName>David Newell</fullName>
            </value>
            <value>
                <fullName>Don Zerbian</fullName>
            </value>
            <value>
                <fullName>Doug Mary</fullName>
            </value>
            <value>
                <fullName>Doug Wittenberg</fullName>
            </value>
            <value>
                <fullName>Duane Abbott</fullName>
            </value>
            <value>
                <fullName>Eric Graefen</fullName>
            </value>
            <value>
                <fullName>Frank Waterer</fullName>
            </value>
            <value>
                <fullName>Gene Haub</fullName>
            </value>
            <value>
                <fullName>Gregory Johnson</fullName>
            </value>
            <value>
                <fullName>Hobby Howard</fullName>
            </value>
            <value>
                <fullName>Jeff Kemp</fullName>
            </value>
            <value>
                <fullName>Jim Holmquist</fullName>
            </value>
            <value>
                <fullName>John McDermott</fullName>
            </value>
            <value>
                <fullName>Keith Tully</fullName>
            </value>
            <value>
                <fullName>Ken Hasner</fullName>
            </value>
            <value>
                <fullName>Mark Claxton</fullName>
            </value>
            <value>
                <fullName>Mark Ellis</fullName>
            </value>
            <value>
                <fullName>Matt Angell</fullName>
            </value>
            <value>
                <fullName>Mike Warren</fullName>
            </value>
            <value>
                <fullName>Rick Maupin</fullName>
            </value>
            <value>
                <fullName>Robert Coletti</fullName>
            </value>
            <value>
                <fullName>Rodger Henn</fullName>
            </value>
            <value>
                <fullName>Roger Haskin</fullName>
            </value>
            <value>
                <fullName>Scott Gray</fullName>
            </value>
            <value>
                <fullName>Scott Mercer</fullName>
            </value>
            <value>
                <fullName>Tim Steele</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>