force-app/main/default/objects/Campaign/fields/WTR_Budget_Goal__c.field-meta.xml
<CustomField>
    <fullName>WTR_Budget_Goal__c</fullName>
    <label>WTR Budget Goal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>