force-app/main/default/objects/Campaign/fields/WTR_Status_Set__c.field-meta.xml
<CustomField>
    <fullName>WTR_Status_Set__c</fullName>
    <defaultValue>false</defaultValue>
    <label>WTR Status Set</label>
    <type>Checkbox</type>
</CustomField>