force-app/main/default/objects/Campaign/listViews/Aborted.listView-meta.xml
<ListView>
    <fullName>Aborted</fullName>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Campaign_Code__c</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.LAST_UPDATE</columns>
    <columns>Event_Code__c</columns>
    <columns>Website_URL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Event_Code__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CAMPAIGN.STATUS</field>
        <operation>equals</operation>
        <value>Aborted</value>
    </filters>
    <label>Aborted</label>
</ListView>