force-app/main/default/objects/Campaign/listViews/All_Campaigns.listView-meta.xml
<ListView>
    <fullName>All_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Campaign_Code__c</columns>
    <columns>PARENT_NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>Event_Code__c</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Campaign_Code__c</field>
        <operation>equals</operation>
        <value>26EROCRU26</value>
    </filters>
    <label>All Campaigns</label>
</ListView>