force-app/main/default/objects/Campaign/listViews/Campaigns_with_Parent_Campaigns.listView-meta.xml
<ListView>
    <fullName>Campaigns_with_Parent_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Campaign_Code__c</columns>
    <columns>PARENT_NAME</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>Event_Code__c</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Event_Area__c</columns>
    <columns>Territory_Code__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.START_DATE</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>Campaign_Code__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>PARENT_NAME</field>
        <operation>notEqual</operation>
    </filters>
    <label>Campaigns with Parent Campaigns</label>
</ListView>