force-app/main/default/objects/Campaign/listViews/Cirrus.listView-meta.xml
<ListView>
    <fullName>Cirrus</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>Event_Code__c</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.CREATED_DATE</field>
        <operation>greaterThan</operation>
        <value>1/1/2023 12:00 AM</value>
    </filters>
    <label>Cirrus</label>
</ListView>