force-app/main/default/objects/Campaign/listViews/Development_Getaways.listView-meta.xml
<ListView>
    <fullName>Development_Getaways</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Campaign_Code__c</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.ACTIVE</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.NUM_RESPONSES</columns>
    <columns>CAMPAIGN.NUM_OPPORTUNITIES</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.CAMPAIGN_TYPE</field>
        <operation>equals</operation>
        <value>Event</value>
    </filters>
    <label>Development Getaways</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Development_Upper_Level</roleAndSubordinatesInternal>
        <roleAndSubordinatesInternal>Donor_Operations</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>