force-app/main/default/objects/Campaign/listViews/Global_Campaigns.listView-meta.xml
<ListView>
    <fullName>Global_Campaigns</fullName>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Campaign_Code__c</columns>
    <columns>PARENT_NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.END_DATE</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CAMPAIGN.LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.CAMPAIGN_TYPE</field>
        <operation>equals</operation>
        <value>Global Dinner,Global Webinar</value>
    </filters>
    <label>Global Campaigns</label>
</ListView>