force-app/main/default/objects/Campaign/listViews/Marketing_Cloud_Campaigns.listView-meta.xml
<ListView>
    <fullName>Marketing_Cloud_Campaigns</fullName>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Campaign_Code__c</columns>
    <columns>PARENT_NAME</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.CAMPAIGN_TYPE</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>Sync_MC__c</columns>
    <columns>Source_Campaign_Code__c</columns>
    <columns>MC_Sub_Id__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sync_MC__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Marketing Cloud Campaigns</label>
</ListView>