force-app/main/default/objects/Campaign/listViews/Vertical_Marriage_Campaigns.listView-meta.xml
<ListView>
    <fullName>Vertical_Marriage_Campaigns</fullName>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Campaign_Code__c</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.LAST_UPDATE</columns>
    <columns>Event_Code__c</columns>
    <columns>Website_URL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.NAME</field>
        <operation>contains</operation>
        <value>Vertical Marriage</value>
    </filters>
    <label>Vertical Marriage Campaigns</label>
</ListView>