force-app/main/default/objects/Campaign/listViews/X2023_WTR_Campaigns.listView-meta.xml
<ListView>
    <fullName>X2023_WTR_Campaigns</fullName>
    <columns>CAMPAIGN.CREATED_DATE</columns>
    <columns>CAMPAIGN.NAME</columns>
    <columns>Campaign_Code__c</columns>
    <columns>CAMPAIGN.START_DATE</columns>
    <columns>CAMPAIGN.NUM_CONTACTS</columns>
    <columns>CAMPAIGN.STATUS</columns>
    <columns>CAMPAIGN.LAST_UPDATE</columns>
    <columns>Event_Code__c</columns>
    <columns>Website_URL__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CAMPAIGN.START_DATE</field>
        <operation>greaterThan</operation>
        <value>8/31/2022</value>
    </filters>
    <filters>
        <field>Event_Code__c</field>
        <operation>notEqual</operation>
    </filters>
    <filters>
        <field>CAMPAIGN.START_DATE</field>
        <operation>lessThan</operation>
        <value>7/1/2024</value>
    </filters>
    <label>2023  WTR Campaigns</label>
</ListView>